# api_gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release-image.yml  tests.yml
config/: gateway.container.yaml  gateway.yaml
openapi_json/: lta_datamall_openapi_v0-1-1.json
src/gateway_framework/: __init__.py  admin.py  api_keys.py  app.py  cache.py  companion.py  config.py  main.py  proxy.py
src/gateway_framework/static/admin/: app.js  index.html  styles.css
tests/: test_api_keys.py  test_app.py  test_companion.py  test_config.py  test_main.py  test_proxy.py
